# zxp-manager

./: .gitignore  CLAUDE.md  Cargo.toml  DIOXUS_RULES_AND_BEST_PRACTICES.md  Dioxus.toml  VectorChecker-v1.0.0.zxp
assets/: main.css  plugins_panel.css  sidebar.css  status_bar.css  themes.css
research/: CEP_EXTENSION_PATHS_RESEARCH.md  ELEVATED_REMOVAL_PLAN.md
src/: data_operations.rs  file_operations.rs  main.rs  message.rs
src/components/: plugins_panel.rs  sidebar.rs  status_bar.rs
