[package]
name = "zxp-manager"
version = "0.1.0"
authors = ["Andrii Mahda <durstweet@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
quick-xml = { version = "0.38.2", features = ["serialize"] }
dirs = "6.0"
log = "0.4.27"
rfd = "0.15.4"
zip = "4.3.0"
libc = "0.2"
tokio = { version = "1.0", features = ["time"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
